// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.api.v1;

import "google/api/annotations.proto";
import "proto/config/v1/tool.proto";
import "proto/mcp_router/v1/mcp_router.proto";

option go_package = "github.com/mcpany/core/proto/api/v1";
option java_outer_classname = "ToolProto";
option features.field_presence = IMPLICIT;

message ListToolsRequest {}

message ListToolsResponse {
  repeated mcpany.mcp_router.v1.Tool tools = 1;
}

message GetToolRequest {
  string tool_name = 1;
}

message GetToolResponse {
  mcpany.mcp_router.v1.Tool tool = 1;
}

message RegisterToolsRequest {
    string service_name = 1;
    string namespace = 2;
    repeated mcpany.config.v1.ToolDefinition tools = 3;
}

message RegisterToolsResponse {
    string message = 1;
    int32 tools_registered = 2;
}

service ToolService {
    rpc ListTools(ListToolsRequest) returns (ListToolsResponse) {
        option (google.api.http) = {
            get: "/v1/tools"
        };
    }
    rpc GetTool(GetToolRequest) returns (GetToolResponse) {
        option (google.api.http) = {
            get: "/v1/tools/{tool_name}"
        };
    }
    rpc RegisterTools(RegisterToolsRequest) returns (RegisterToolsResponse) {
        option (google.api.http) = {
            post: "/v1/services/tools/register"
            body: "*"
        };
    }
}
